syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message NumberMessage {
    int64 number = 1;
}

message RequestMessage {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

service RemoteService {
    rpc getNumbers(RequestMessage) returns (stream NumberMessage);
}
